# prompto

./: .gitignore  AGENT5_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLAUDE_45_IMPROVEMENTS.md  CODEBASE_ANALYSIS.md  CONTEXT_FILTERING.md  HYBRID_SEARCH_IMPLEMENTATION_PLAN.md  MODEL_CONFIGURATION.md  PHASE5_IMPLEMENTATION.md  README.md  SETUP.md  bun.lockb  create-icon.ps1  index.html  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: search_benchmark.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/anthropic/: mod.rs  models.rs
src-tauri/src/commands/: anthropic_commands.rs  index_commands.rs  mod.rs
src-tauri/src/indexing/: embedding_generator.rs  hybrid_search.rs  mod.rs  persistence.rs  query_analyzer.rs  relevance_scorer.rs  tantivy_indexer.rs  text_normalizer.rs  tree_sitter_indexer.rs  vector_store.rs
src-tauri/src/models/: code_index.rs
src/agents/: codebase-analyzer.ts  intent-analyzer.ts  prompt-optimizer.ts  prompt-templates.ts
src/components/index-viewer/: IndexStats.tsx
src/components/project-selector/: ProjectSelector.tsx
src/components/prompt-editor/: OptimizedPromptViewer.tsx  PromptEditor.tsx
src/components/ui/: button.tsx
src/lib/: tauri-api.ts
src/store/: app-store.ts
src/types/: agent.ts
