[package]
name = "prompto"
version = "0.1.0"
description = "Desktop application for codebase indexing and agentic prompt generation"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# tree-sitter for code parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"

# File system utilities
walkdir = "2"
ignore = "0.4"

# Text processing
unicode-segmentation = "1.10"
rust-stemmers = "1.2"

# ML/Embeddings
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.15"
hf-hub = "0.3"
ndarray = "0.15"

# Vector storage
usearch = "2.15"

# Serialization
bincode = "1.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2.0"

# Full-text search
tantivy = "0.22"
tempfile = "3.8"

[[bench]]
name = "search_benchmark"
harness = false

[dev-dependencies]
criterion = "0.5"
